--- a/index.ipynb
+++ b/index.ipynb
@@ -134,20 +134,17 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "can only concatenate list (not \"int\") to list",
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (<ipython-input-5-35c5d69eee7b>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-39298e537b96>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# add 3 to each element\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mlist_of_integers\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"int\") to list"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-35c5d69eee7b>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return list_of_integers + 3\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
      ]
     }
    ],
    "source": [
     "# add 3 to each element\n",
-    "list_of_integers + 3"
+    "return list_of_integers + 3"
    ]
   },
   {
@@ -159,9 +156,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 3]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# add 3 to each element\n",
     "list_of_integers + [3]"
@@ -176,9 +184,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# convert to NumPy Array\n",
     "array_of_integers = np.array(list_of_integers)\n",
@@ -204,9 +223,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is an array with the square footages for each room: [130 180 320  20]\n"
+     ]
+    }
+   ],
    "source": [
     "lenghts_of_each_room = np.array([10, 12, 20, 5])\n",
     "widths_of_each_room = np.array([13, 15, 16, 4])\n",
@@ -296,10 +323,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "In this lesson, we introduced using NumPy to create arrays in Python. NumPy is a library that is very commonly used in Python when performing scientific computing operations. We looked at how NumPy can greatly reduce the amount of code we write while keeping our code very clear and concise. Next, we briefly looked at an example of the performance benefits of NumPy compared to a traditional list in Python. Finally, we touched upon NumPy's random number generating capabilities."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To conclude this lesson, it is important to mention that NumPy is a very useful library to perform random sampling. `numpy.random`. What this means is that, given that we know what a certain population looks like, we can use `numpy.random` to essentially \"produce\" random samples given the population information.\n",
+    "\n",
+    "Don't worry if this doesn't make sense right now. We'll explore this NumPy functionality later on."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simulations with NumPy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time it takes to add 1 to each element in a list withOUT NumPy: 0.20738000000000012\n",
+      "Time it takes to add 1 to each element in a list WITH NumPy: 0.005276999999999976\n",
+      "NumPy completes the operation 0.20210300000000014 seconds faster than a traditional list\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "\n",
@@ -328,34 +395,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "## Simulations with NumPy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To conclude this lesson, it is important to mention that NumPy is a very useful library to perform random sampling. `numpy.random`. What this means is that, given that we know what a certain population looks like, we can use `numpy.random` to essentially \"produce\" random samples given the population information.\n",
-    "\n",
-    "Don't worry if this doesn't make sense right now. We'll explore this NumPy functionality later on."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Summary"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this lesson, we introduced using NumPy to create arrays in Python. NumPy is a library that is very commonly used in Python when performing scientific computing operations. We looked at how NumPy can greatly reduce the amount of code we write while keeping our code very clear and concise. Next, we briefly looked at an example of the performance benefits of NumPy compared to a traditional list in Python. Finally, we touched upon NumPy's random number generating capabilities."
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
