Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -146,7 +146,7 @@
    ],
    "source": [
     "# add 3 to each element\n",
-    "list_of_integers + [3]"
+    "list_of_integers + ["
    ]
   },
   {
