Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "list_of_integers+3"
+   ]
   },
   {
    "cell_type": "code",
