Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -130,23 +130,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 2, 3]"
+       "array([3, 4, 5, 6])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# add 3 to each element\n",
-    "list_of_integers"
+    "np.add(list_of_integers,3)"
    ]
   },
   {
