--- a/index.ipynb
+++ b/index.ipynb
@@ -362,7 +362,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nyc_avg_t"
+   ]
   },
   {
    "cell_type": "code",
