--- a/index.ipynb
+++ b/index.ipynb
@@ -382,7 +382,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.array()"
+   ]
   },
   {
    "cell_type": "code",
