Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -379,11 +379,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([39, 42, 50, 62, 72, 80, 85, 84, 76, 65, 54, 44])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "np.array()"
+    "np.array(nyc_avg_temps_f)"
    ]
   },
   {
