--- a/index.ipynb
+++ b/index.ipynb
@@ -379,23 +379,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([39, 42, 50, 62, 72, 80, 85, 84, 76, 65, 54, 44])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.array(nyc_avg_temps_f)"
+    "np_nyc_avg_temps_f = np.array(nyc_avg_temps_f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
