Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -391,6 +391,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "np_nyc_avg_temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
