--- a/index.ipynb
+++ b/index.ipynb
@@ -388,11 +388,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 7, 10, 18, 30, 40, 48, 53, 52, 44, 33, 22, 12])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "np_nyc_avg_temps_f"
+    "np_nyc_avg_temps_f-32"
    ]
   },
   {
