--- a/index.ipynb
+++ b/index.ipynb
@@ -373,20 +373,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-30-2bed26d6ed1e>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-2bed26d6ed1e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    np_nyc_avg_temps_f-32*(5/9\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([21.22222222, 24.22222222, 32.22222222, 44.22222222, 54.22222222,\n",
+       "       62.22222222, 67.22222222, 66.22222222, 58.22222222, 47.22222222,\n",
+       "       36.22222222, 26.22222222])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "np_nyc_avg_temps_f-32*(5/9"
+    "= np_nyc_avg_temps_f-32*(5/9)"
    ]
   },
   {
