--- a/index.ipynb
+++ b/index.ipynb
@@ -390,7 +390,7 @@
     }
    ],
    "source": [
-    "= np_nyc_avg_temps_f-32*(5/9)"
+    "np_nyc_av= np_nyc_avg_temps_f-32*(5/9)"
    ]
   },
   {
