--- a/index.ipynb
+++ b/index.ipynb
@@ -373,7 +373,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np_nyc_avg_temps_c = np_nyc_avg_temps_f-32*(5/9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -384,21 +393,14 @@
        "       36.22222222, 26.22222222])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np_nyc_av= np_nyc_avg_temps_f-32*(5/9)"
+    "np_nyc_avg_temps_c"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
